# Mutual-Pose-Recognition-Based-on-Multiple-Cues-in-MRS

./: README.md
Data Collection/src/calVFH/: CMakeLists.txt
Data Collection/src/calVFH/src/: collect_only_vfh.cpp
Data_Collection/src/calVFH/launch/: collect_80.launch
Data_Collection/src/calVFH/rviz_cfg/: visualize.rviz
Data_Collection/src/sphereProjection/launch/: sphere.launch
data_collection_robotA/src/: README.md
data_collection_robotA/src/calVFH/: CMakeLists.txt  package.xml
data_collection_robotA/src/calVFH/src/: collect_only_vfh.cpp
data_collection_robotA/src/sphereProjection/: CMakeLists.txt  package.xml
data_collection_robotA/src/sphereProjection/src/: collect.cpp
data_collection_robotB/src/capturePose/: CMakeLists.txt  README.md  package.xml
data_collection_robotB/src/capturePose/include/capturePose/: common.h
data_collection_robotB/src/capturePose/src/: capturepose.cpp
pose_learning/: align_images_poses.py  config.yaml  error_propagation_new.py  error_propagation_old.py  generate_data.py  infer.py  infer_ep.py  net_rs.py  net_vlp.py  train.py  txt2npy.py
pose_learning/raw_txt/: time.txt
pose_learning/raw_txt/depth/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
pose_learning/raw_txt/intensity/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
pose_learning/raw_txt/poses/: timePose.txt  truePose.txt
pose_learning/raw_txt/vertex_img_n0/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
pose_learning/raw_txt/vertex_img_n1/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
pose_learning/raw_txt/vertex_img_n2/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
pose_learning/visualization/: show_infer_ep.py
